# inuaCollective

./: .env  app.py  package-lock.json  pyproject.toml  requirements.txt  title_intro.json
core/: __init__.py  config.py  extensions.py  models.py
core/client/: routes.py
core/static/css/: main.css
core/templates/client/: base.html  home.html
core/users/: .routes.py.swp  forms.py  routes.py  utils.py
instance/: project.db  project.db-journal
migrations/versions/: 251d0d83579a_many_changes.py  2effef51aaa9_tables_added.py  3edb391a5354_added_subprogram.py  d855a540538e_program_and_subprograms.py  fae9858b0101_added_socials_column.py
static/css/: base.css  main.css  s.css  style.css  y.css
static/js/: main.js  s.js  script.js
templates/: about.html  base.html  blog.html  blog_detail.html  community.html  create_blog.html  create_community.html  create_gallery.html  create_housing.html  create_our_team.html  create_program.html  create_sports.html  create_subprogram.html  create_testimonial.html  create_title.html  create_youth.html  gallery.html  hero.html  home.html  housing.html  login.html  main.html  nav.html  navbar.html  program.html  program_detail.html  register.html  sports.html  sub_program.html  youth.html
templates/admin/: base.html  create_program.html  layout.html  login.html  register.html
templates/client/: aboutus.html  base.html  home.html  main.html  program.html
